<resources>
    <string name="app_name">Pet Feeder</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="frekuensi">Frekuensi</string>
    <string name="waktu">Waktu</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
